# darling-pyobjc

./: .gitignore  CMakeLists.txt  README.md  build.sh
darling/script/: build.sh  fix_files.sh
pyobjc/pyobjc-core-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-Accounts-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-Accounts-2.5.1/Lib/pyobjc_framework_Accounts.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-AddressBook-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-AddressBook-2.5.1/Lib/pyobjc_framework_AddressBook.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-AppleScriptKit-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-AppleScriptKit-2.5.1/Lib/pyobjc_framework_AppleScriptKit.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-AppleScriptObjC-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-AppleScriptObjC-2.5.1/Lib/pyobjc_framework_AppleScriptObjC.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-Automator-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-Automator-2.5.1/Lib/pyobjc_framework_Automator.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-CFNetwork-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-CFNetwork-2.5.1/Lib/pyobjc_framework_CFNetwork.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-Cocoa-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-Cocoa-2.5.1/Lib/pyobjc_framework_Cocoa.egg-info/: SOURCES.txt  requires.txt
pyobjc/pyobjc-framework-Collaboration-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-Collaboration-2.5.1/Lib/pyobjc_framework_Collaboration.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-CoreData-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-CoreData-2.5.1/Lib/pyobjc_framework_CoreData.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-CoreLocation-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-CoreLocation-2.5.1/Lib/pyobjc_framework_CoreLocation.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-CoreText-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-CoreText-2.5.1/Lib/pyobjc_framework_CoreText.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-DictionaryServices-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-DictionaryServices-2.5.1/Lib/pyobjc_framework_DictionaryServices.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-EventKit-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-EventKit-2.5.1/Lib/pyobjc_framework_EventKit.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-ExceptionHandling-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-ExceptionHandling-2.5.1/Lib/pyobjc_framework_ExceptionHandling.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-FSEvents-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-FSEvents-2.5.1/Lib/pyobjc_framework_FSEvents.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-InputMethodKit-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-InputMethodKit-2.5.1/Lib/pyobjc_framework_InputMethodKit.egg-info/: SOURCES.txt  requires.txt
pyobjc/pyobjc-framework-InstallerPlugins-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-InstallerPlugins-2.5.1/Lib/pyobjc_framework_InstallerPlugins.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-InstantMessage-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-InstantMessage-2.5.1/Lib/pyobjc_framework_InstantMessage.egg-info/: SOURCES.txt  requires.txt
pyobjc/pyobjc-framework-LatentSemanticMapping-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-LatentSemanticMapping-2.5.1/Lib/pyobjc_framework_LatentSemanticMapping.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-LaunchServices-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-LaunchServices-2.5.1/Lib/pyobjc_framework_LaunchServices.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-Message-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-Message-2.5.1/Lib/pyobjc_framework_Message.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-OpenDirectory-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-OpenDirectory-2.5.1/Lib/pyobjc_framework_OpenDirectory.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-PreferencePanes-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-PreferencePanes-2.5.1/Lib/pyobjc_framework_PreferencePanes.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-PubSub-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-PubSub-2.5.1/Lib/pyobjc_framework_PubSub.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-QTKit-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-QTKit-2.5.1/Lib/pyobjc_framework_QTKit.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-Quartz-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-Quartz-2.5.1/Lib/pyobjc_framework_Quartz.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-ScreenSaver-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-ScreenSaver-2.5.1/Lib/pyobjc_framework_ScreenSaver.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-ScriptingBridge-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-ScriptingBridge-2.5.1/Lib/pyobjc_framework_ScriptingBridge.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-SearchKit-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-SearchKit-2.5.1/Lib/pyobjc_framework_SearchKit.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-ServiceManagement-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-ServiceManagement-2.5.1/Lib/pyobjc_framework_ServiceManagement.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-Social-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-Social-2.5.1/Lib/pyobjc_framework_Social.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-SyncServices-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-SyncServices-2.5.1/Lib/pyobjc_framework_SyncServices.egg-info/: SOURCES.txt  requires.txt
pyobjc/pyobjc-framework-SystemConfiguration-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-SystemConfiguration-2.5.1/Lib/pyobjc_framework_SystemConfiguration.egg-info/: SOURCES.txt
pyobjc/pyobjc-framework-WebKit-2.5.1/: CMakeLists.txt
pyobjc/pyobjc-framework-WebKit-2.5.1/Lib/pyobjc_framework_WebKit.egg-info/: SOURCES.txt
